--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -8,6 +8,99 @@
         WindowStartupLocation="CenterScreen"
         Title="Конвертер величин" Height="450" Width="800">
     <Grid>
+        <!--Самый основной грид, 3 ряда.-->
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
         
+        <!--Сетка первого ряда; содержит выборку конвертаций-->
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            
+            <!--Первая колонка ряда, содержит форму конвертации-->
+            <StackPanel Grid.Column="0">
+                <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
+                       Content="Форма конвертации">
+                </Label>
+                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+            </StackPanel>
+
+            <!--Вторая колонка ряда, содержит исходную величину конвертации-->
+            <StackPanel Grid.Column="1">
+                <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
+                       Content="Исходная величина">
+                </Label>
+                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+            </StackPanel>
+
+            <!--Третья колонка ряда, содержит целевую величину конвертации-->
+            <StackPanel Grid.Column="2">
+                <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
+                       Content="Целевая величина">
+                </Label>
+                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+            </StackPanel>
+        </Grid>
+
+        <!--Средний ряд: ввод/вывод информации-->
+        <TextBox x:Name="textBox" Grid.Row="1">
+            
+        </TextBox>
+
+        <!--Нижний ряд, содержащий кнопки-->
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0,5*"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <!--Цифры-->
+            <UniformGrid Grid.Row="2" Columns="5" HorizontalAlignment="Stretch">
+                <Button x:Name="button_1">1</Button>
+                <Button x:Name="button_2">2</Button>
+                <Button x:Name="button_3">3</Button>
+                <Button x:Name="button_4">4</Button>
+                <Button x:Name="button_5">5</Button>
+                <Button x:Name="button_6">6</Button>
+                <Button x:Name="button_7">7</Button>
+                <Button x:Name="button_8">8</Button>
+                <Button x:Name="button_9">9</Button>
+                <Button x:Name="button_0">0</Button>
+            </UniformGrid>
+
+            <!--Запятая, стрелки ввода и удаления-->
+            <Grid Grid.Column="2" HorizontalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Button x:Name="button_point" Content="," Grid.Row="0" FontSize="18"/>
+                <Button x:Name="button_enter" Content="→" Grid.Row="1" FontSize="18"/>
+                <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18"/>
+            </Grid>
+
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Button Grid.Row="0" x:Name="button_addit" FontSize="16">+</Button>
+                <Button Grid.Row="1" x:Name="button_sub" FontSize="16">-</Button>
+                <Button Grid.Row="2" x:Name="button_mult" FontSize="16">*</Button>
+                <Button Grid.Row="3" x:Name="button_divid" FontSize="16">/</Button>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
