--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -28,30 +28,35 @@
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
                        Content="Форма конвертации">
                 </Label>
-                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+                <ComboBox x:Name="comboBoxForm" VerticalAlignment="Stretch" 
+                          Margin="10" Padding="20" FontSize="16"
+                          SelectionChanged="comboBoxForm_SelectionChanged">
+                    <ComboBoxItem>Площадь</ComboBoxItem>
+                    <ComboBoxItem>Расстояние</ComboBoxItem>
+                    <ComboBoxItem>Масса</ComboBoxItem>
+                    <ComboBoxItem>Время</ComboBoxItem>
+                </ComboBox>
             </StackPanel>
 
             <!--Вторая колонка ряда, содержит исходную величину конвертации-->
             <StackPanel Grid.Column="1">
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
-                       Content="Исходная величина">
+                       Content="Исходное измерение">
                 </Label>
-                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+                <ComboBox x:Name="comboBoxDefault" VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
             </StackPanel>
 
             <!--Третья колонка ряда, содержит целевую величину конвертации-->
             <StackPanel Grid.Column="2">
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="18"
-                       Content="Целевая величина">
+                       Content="Целевое измерение">
                 </Label>
-                <ListBox VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
+                <ComboBox x:Name="comboBoxTarget" VerticalAlignment="Stretch" Margin="10" Padding="20" FontSize="16"/>
             </StackPanel>
         </Grid>
 
         <!--Средний ряд: ввод/вывод информации-->
-        <TextBox x:Name="textBox" Grid.Row="1">
-            
-        </TextBox>
+        <TextBox x:Name="textBox" Grid.Row="1" FontSize="16"/>
 
         <!--Нижний ряд, содержащий кнопки-->
         <Grid Grid.Row="2">
@@ -75,19 +80,6 @@
                 <Button x:Name="button_0">0</Button>
             </UniformGrid>
 
-            <!--Запятая, стрелки ввода и удаления-->
-            <Grid Grid.Column="2" HorizontalAlignment="Stretch">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <Button x:Name="button_point" Content="," Grid.Row="0" FontSize="18"/>
-                <Button x:Name="button_enter" Content="→" Grid.Row="1" FontSize="18"/>
-                <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18"/>
-            </Grid>
-
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -100,6 +92,21 @@
                 <Button Grid.Row="1" x:Name="button_sub" FontSize="16">-</Button>
                 <Button Grid.Row="2" x:Name="button_mult" FontSize="16">*</Button>
                 <Button Grid.Row="3" x:Name="button_divid" FontSize="16">/</Button>
+            </Grid>
+
+            <!--Запятая, стрелки ввода и удаления-->
+            <Grid Grid.Column="2" HorizontalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Button x:Name="button_C" Content="C" Grid.Row="0" FontSize="18"/>
+                <Button x:Name="button_point" Content="," Grid.Row="1" FontSize="18"/>
+                <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18"/>
+                <Button x:Name="button_enter" Content="→" Grid.Row="3" FontSize="18"/>
             </Grid>
         </Grid>
     </Grid>
