--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -68,16 +68,16 @@
 
             <!--Цифры-->
             <UniformGrid Grid.Row="2" Columns="5" HorizontalAlignment="Stretch">
-                <Button x:Name="button_1">1</Button>
-                <Button x:Name="button_2">2</Button>
-                <Button x:Name="button_3">3</Button>
-                <Button x:Name="button_4">4</Button>
-                <Button x:Name="button_5">5</Button>
-                <Button x:Name="button_6">6</Button>
-                <Button x:Name="button_7">7</Button>
-                <Button x:Name="button_8">8</Button>
-                <Button x:Name="button_9">9</Button>
-                <Button x:Name="button_0">0</Button>
+                <Button x:Name="button_1" Click="button_1_Click">1</Button>
+                <Button x:Name="button_2" Click="button_2_Click">2</Button>
+                <Button x:Name="button_3" Click="button_3_Click">3</Button>
+                <Button x:Name="button_4" Click="button_4_Click">4</Button>
+                <Button x:Name="button_5" Click="button_5_Click">5</Button>
+                <Button x:Name="button_6" Click="button_6_Click">6</Button>
+                <Button x:Name="button_7" Click="button_7_Click">7</Button>
+                <Button x:Name="button_8" Click="button_8_Click">8</Button>
+                <Button x:Name="button_9" Click="button_9_Click">9</Button>
+                <Button x:Name="button_0" Click="button_0_Click">0</Button>
             </UniformGrid>
 
             <Grid Grid.Column="1">
@@ -88,10 +88,10 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Button Grid.Row="0" x:Name="button_addit" FontSize="16">+</Button>
-                <Button Grid.Row="1" x:Name="button_sub" FontSize="16">-</Button>
-                <Button Grid.Row="2" x:Name="button_mult" FontSize="16">*</Button>
-                <Button Grid.Row="3" x:Name="button_divid" FontSize="16">/</Button>
+                <Button Grid.Row="0" x:Name="button_addit" FontSize="16" Click="button_addit_Click">+</Button>
+                <Button Grid.Row="1" x:Name="button_sub" FontSize="16" Click="button_sub_Click">-</Button>
+                <Button Grid.Row="2" x:Name="button_mult" FontSize="16" Click="button_mult_Click">*</Button>
+                <Button Grid.Row="3" x:Name="button_divid" FontSize="16" Click="button_divid_Click">/</Button>
             </Grid>
 
             <!--Запятая, стрелки ввода и удаления-->
@@ -103,9 +103,9 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Button x:Name="button_C" Content="C" Grid.Row="0" FontSize="18"/>
-                <Button x:Name="button_point" Content="," Grid.Row="1" FontSize="18"/>
-                <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18"/>
+                <Button x:Name="button_C" Content="C" Grid.Row="0" FontSize="18" Click="button_C_Click"/>
+                <Button x:Name="button_point" Content="," Grid.Row="1" FontSize="18" Click="button_point_Click"/>
+                <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18" Click="button_del_Click"/>
                 <Button x:Name="button_enter" Content="→" Grid.Row="3" FontSize="18"/>
             </Grid>
         </Grid>
