--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -106,7 +106,7 @@
                 <Button x:Name="button_C" Content="C" Grid.Row="0" FontSize="18" Click="button_C_Click"/>
                 <Button x:Name="button_point" Content="," Grid.Row="1" FontSize="18" Click="button_point_Click"/>
                 <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18" Click="button_del_Click"/>
-                <Button x:Name="button_enter" Content="→" Grid.Row="3" FontSize="18"/>
+                <Button x:Name="button_enter" Content="→" Grid.Row="3" FontSize="18" Click="button_enter_Click"/>
             </Grid>
         </Grid>
     </Grid>
