Изменена иконка на более качественную и изменён цвет кнопки конвертации.

--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -122,7 +122,7 @@
                 <Button x:Name="button_C" Content="C" Grid.Row="0" FontSize="18" Click="button_C_Click" Background="#b7e8cc"/>
                 <Button x:Name="button_point" Content="." Grid.Row="1" FontSize="18" Click="button_point_Click" Background="#b7e8cc"/>
                 <Button x:Name="button_del" Content="←" Grid.Row="2" FontSize="18" Click="button_del_Click" Background="#b7e8cc"/>
-                <Button x:Name="button_enter" Content="Convert" Grid.Row="3" FontSize="15" Click="Button_enter_Click" Background="#81e5c7"/>
+                <Button x:Name="button_enter" Content="Convert" Grid.Row="3" FontSize="15" Click="Button_enter_Click" Background="#ebbebe"/>
             </Grid>
         </Grid>
     </Grid>
