Внесены небольшие изменения в UI. Добавлена фокусировка при нажатии на каждую кнопку.

--- a/ValueConverter/MainWindow.xaml
+++ b/ValueConverter/MainWindow.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
         
         <!--Сетка первого ряда; содержит выборку конвертаций-->
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" Background="LightYellow">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -28,10 +28,11 @@
             <StackPanel Grid.Column="0">
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" 
                        FontSize="18"
+                       FontWeight="SemiBold"
                        Content="Форма конвертации">
                 </Label>
                 <ComboBox x:Name="comboBoxForm" VerticalAlignment="Stretch" 
-                          Margin="10" Padding="20" FontSize="16"
+                          Margin="5" Padding="20" FontSize="16"
                           SelectionChanged="ComboBoxForm_SelectionChanged">
                     <ComboBoxItem>Площадь</ComboBoxItem>
                     <ComboBoxItem>Расстояние</ComboBoxItem>
@@ -44,25 +45,28 @@
             <StackPanel Grid.Column="1">
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" 
                        FontSize="18"
+                       FontWeight="SemiBold"
                        Content="Исходное измерение">
                 </Label>
                 <ComboBox x:Name="comboBoxDefault" VerticalAlignment="Stretch" 
-                          Margin="10" Padding="20" FontSize="16"/>
+                          Margin="5" Padding="20" FontSize="16"/>
             </StackPanel>
 
             <!--Третья колонка ряда, содержит целевую величину конвертации-->
             <StackPanel Grid.Column="2">
                 <Label VerticalAlignment="Top" HorizontalAlignment="Center" 
                        FontSize="18"
+                       FontWeight="SemiBold"
                        Content="Целевое измерение">
                 </Label>
                 <ComboBox x:Name="comboBoxTarget" VerticalAlignment="Stretch"
-                          Margin="10" Padding="20" FontSize="16"/>
+                          Margin="5" Padding="20" FontSize="16"/>
             </StackPanel>
         </Grid>
 
         <!--Второй ряд: ввод/вывод информации-->
-        <TextBox x:Name="textBox" Grid.Row="1" FontSize="17"/>
+        <TextBox x:Name="textBox" Grid.Row="1" FontSize="19" AcceptsReturn="True"
+                 TextWrapping="Wrap" Background="White"/>
         
         <!--Третий ряд: состояние ввода.вывода-->
         <StackPanel Grid.Row="2" ClipToBounds="False" Background="PapayaWhip">
@@ -84,16 +88,26 @@
 
             <!--Цифры-->
             <UniformGrid Grid.Row="2" Columns="5" HorizontalAlignment="Stretch">
-                <Button x:Name="button_1" Click="button_1_Click" Background="AliceBlue">1</Button>
-                <Button x:Name="button_2" Click="button_2_Click" Background="AliceBlue">2</Button>
-                <Button x:Name="button_3" Click="button_3_Click" Background="AliceBlue">3</Button>
-                <Button x:Name="button_4" Click="button_4_Click" Background="AliceBlue">4</Button>
-                <Button x:Name="button_5" Click="button_5_Click" Background="AliceBlue">5</Button>
-                <Button x:Name="button_6" Click="button_6_Click" Background="AliceBlue">6</Button>
-                <Button x:Name="button_7" Click="button_7_Click" Background="AliceBlue">7</Button>
-                <Button x:Name="button_8" Click="button_8_Click" Background="AliceBlue">8</Button>
-                <Button x:Name="button_9" Click="button_9_Click" Background="AliceBlue">9</Button>
-                <Button x:Name="button_0" Click="button_0_Click" Background="AliceBlue">0</Button>
+                <Button x:Name="button_1" Click="button_1_Click" 
+                        Background="AliceBlue" FontSize="16">1</Button>
+                <Button x:Name="button_2" Click="button_2_Click" 
+                        Background="AliceBlue" FontSize="16">2</Button>
+                <Button x:Name="button_3" Click="button_3_Click" 
+                        Background="AliceBlue" FontSize="16">3</Button>
+                <Button x:Name="button_4" Click="button_4_Click" 
+                        Background="AliceBlue" FontSize="16">4</Button>
+                <Button x:Name="button_5" Click="button_5_Click" 
+                        Background="AliceBlue" FontSize="16">5</Button>
+                <Button x:Name="button_6" Click="button_6_Click" 
+                        Background="AliceBlue" FontSize="16">6</Button>
+                <Button x:Name="button_7" Click="button_7_Click"
+                        Background="AliceBlue" FontSize="16">7</Button>
+                <Button x:Name="button_8" Click="button_8_Click" 
+                        Background="AliceBlue" FontSize="16">8</Button>
+                <Button x:Name="button_9" Click="button_9_Click" 
+                        Background="AliceBlue" FontSize="16">9</Button>
+                <Button x:Name="button_0" Click="button_0_Click" 
+                        Background="AliceBlue" FontSize="16">0</Button>
             </UniformGrid>
 
             <Grid Grid.Column="1">
@@ -104,10 +118,10 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Button Grid.Row="0" x:Name="button_addit" FontSize="16" Click="button_addit_Click" Background="LightGoldenrodYellow">+</Button>
-                <Button Grid.Row="1" x:Name="button_sub" FontSize="16" Click="button_sub_Click" Background="LightGoldenrodYellow">-</Button>
-                <Button Grid.Row="2" x:Name="button_mult" FontSize="16" Click="button_mult_Click" Background="LightGoldenrodYellow">*</Button>
-                <Button Grid.Row="3" x:Name="button_divid" FontSize="16" Click="button_divid_Click" Background="LightGoldenrodYellow">/</Button>
+                <Button Grid.Row="0" x:Name="button_addit" FontSize="18" Click="button_addit_Click" Background="LightGoldenrodYellow">+</Button>
+                <Button Grid.Row="1" x:Name="button_sub" FontSize="18" Click="button_sub_Click" Background="LightGoldenrodYellow">-</Button>
+                <Button Grid.Row="2" x:Name="button_mult" FontSize="18" Click="button_mult_Click" Background="LightGoldenrodYellow">*</Button>
+                <Button Grid.Row="3" x:Name="button_divid" FontSize="18" Click="button_divid_Click" Background="LightGoldenrodYellow">/</Button>
             </Grid>
 
             <!--Запятая, стрелки ввода и удаления-->
